--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,4 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements_docs.txt
+    - name: Create mkdocs
+      run: |
+        mkdocs gh-deploy
 
