add profile config

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,8 +23,8 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Use the built-in GitHub token provided by GitHub Actions
       run: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
+        git config --global user.email "bartwoesik1@gmail.com"
+        git config --global user.name "BartvanWoesik"
     - name: Create mkdocs
       run: |
         mkdocs gh-deploy
