--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,31 +1,29 @@
-name: Mkdocs
-
-on: [push]
-
+name: ci 
+on:
+  push:
+    branches:
+      - master 
+      - main
+permissions:
+  contents: write
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements_docs.txt
-
-    - name: Authenticate with GitHub
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Use the built-in GitHub token provided by GitHub Actions
-      run: |
-        git config --global user.email "bartwoesik1@gmail.com"
-        git config --global user.name "BartvanWoesik"
-    - name: Create mkdocs
-      run: |
-        mkdocs gh-deploy --token $GH_TOKEN
-
+      - uses: actions/checkout@v4
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - uses: actions/cache@v4
+        with:
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
+          restore-keys: |
+            mkdocs-material-
+      - run: pip install -r requirements_docs.txt
+      - run: mkdocs gh-deploy --force
