--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,13 +1,12 @@
-name: ci 
+name: Update Mkdocs
 on:
   push:
     branches:
-      - master 
       - main
 permissions:
   contents: write
 jobs:
-  deploy:
+  create_mkdocs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
