--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 permissions:
   contents: write
 jobs:
@@ -25,4 +28,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install -r requirements_docs.txt
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --force  
