--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 outputs/
 mlruns/*
 mlartifacts/*
-artifact_storage\*
-src\modelling\__pycache__\*
-src\model\__pycache__\*
-src\model\__pycache__\
+artifact_storage/*
+src/modelling/__pycache__/*
+src/model/__pycache__/*
+src/model/__pycache__/
