--- a/config.yaml
+++ b/config.yaml
@@ -90,6 +90,9 @@ model:
     -
       _target_: sklearn.ensemble.HistGradientBoostingClassifier
       learning_rate: 0.001
-      verbose: 2
+      verbose: 0
       class_weight: balanced
+      max_iter: 2500
+      l2_regularization: 0.1
+      early_stopping: True
     
