--- a/config.yaml
+++ b/config.yaml
@@ -89,10 +89,11 @@ model:
       
     -
       _target_: sklearn.ensemble.HistGradientBoostingClassifier
-      learning_rate: 0.001
-      verbose: 0
+      learning_rate: 0.01
+      verbose: 1
       class_weight: balanced
-      max_iter: 2500
-      l2_regularization: 0.1
+      max_iter: 1000
+      l2_regularization: 0.25
       early_stopping: True
+      max_leaf_nodes: 100
     
