add logger to requirements

--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -3,3 +3,4 @@ mkdocs-git-authors-plugin
 mkdocs-material
 mkdocs-table-reader-plugin
 ydata_profiling
+git+https://github.com/BartvanWoesik/MyLogger.git
