--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,12 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools >= 61.0"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry]
-name = "Home_credit_score"
-version = "0.1.0"
-description = "Kaggle challenge for home credit score."
 
-[authors]
-name = "Bart"
 
-[tool.poetry.dependencies]
-python = "^3.11"
+[project]
+name = "example_package_YOUR_USERNAME_HERE"
+version = "0.0.1"
+authors = [
+  { name="Example Author", email="author@example.com" },
+]
