--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,30 @@
 # config.yaml
 
 data:
+  person_1:
+    time_col: []
+    agg_columns:
+      - name: childnum_185L
+        base_feature_name: childnum_185L_mean
+        aggregation: 
+          _target_: data_pipeline.pipes.mean
+          _partial_: true
+      - name: housetype_905L
+        base_feature_name: housetype_905L_last
+        aggregation: 
+          _target_: data_pipeline.pipes.last
+          _partial_: true
+      - name: familystate_447L
+        base_feature_name: familystate_447L_last
+        aggregation: 
+          _target_: data_pipeline.pipes.last
+          _partial_: true
+      - name: education_927M
+        base_feature_name: education_927M_last
+        aggregation: 
+          _target_: data_pipeline.pipes.last
+          _partial_: true
+
   static_0:
     time_col: []
     agg_columns:
@@ -120,15 +144,39 @@ data_pipeline:
 model:
   model_steps: 
     -
+      _target_: model.feature_selector.FeatureSelector
+      features:
+        - childnum_185L_mean
+        - housetype_905L_last
+        - familystate_447L_last
+        - education_927M_last
+        - cardtype_51L_last
+        - credtype_322L_last
+        - numberofcontrsvalue_358L_max
+        - nominalrate_281L_min
+        - totaldebtoverduevalue_178A_max
+        - overdueamount_31A_max
+        - residualamount_488A_max
+        - collater_valueofguarantee_876L_mean
+        - pmts_overdue_1140A_max
+        - pmts_overdue_1140A_min
+        - pmts_overdue_1140A_mean
+        - credacc_cards_status_52L_mode
+        - credacc_cards_status_52L_last
+        - last180dayaveragebalance_704A_last
+        - last180dayaveragebalance_704A_mean
+        - last180dayaveragebalance_704A_max
+        - classificationofcontr_400M_mode
+    -
       _target_: model.modelorchastrator.OptBinningTransformer
-      column: ["credacc_cards_status_52L_mode", "credacc_cards_status_52L_last", "classificationofcontr_400M_mode", "credtype_322L_last", "cardtype_51L_last"]
+      column: ["housetype_905L_last", "education_927M_last", "credacc_cards_status_52L_mode", "familystate_447L_last", "credacc_cards_status_52L_last", "classificationofcontr_400M_mode", "credtype_322L_last", "cardtype_51L_last"]
       
     -
       _target_: sklearn.ensemble.HistGradientBoostingClassifier
       learning_rate: 0.1
       verbose: 1
       class_weight: balanced
-      max_iter: 10
+      max_iter: 100
       l2_regularization: 0.25
       early_stopping: True
       max_leaf_nodes: 100
