--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -7,7 +7,10 @@ defaults:
 
 data_pipeline:
  _target_: data_pipeline.datapipeline.PandasDataPipeline
- steps: []
+ steps:
+  - _target_: data_pipeline.pipelinesteps.change_missing
+    _partial_: true
+    columns: ['housetype_905L_last', 'education_927M_last', 'credacc_cards_status_52L_mode', 'familystate_447L_last', 'credacc_cards_status_52L_last', 'classificationofcontr_400M_mode', 'credtype_322L_last', 'cardtype_51L_last', 'cardtype_51L_mode']
 
 model:
   model_steps: 
@@ -16,18 +19,24 @@ model:
         features: ${features.all_features}
     - OptBinningTransformer:
         _target_: model.modelorchastrator.OptBinningTransformer
-        column: ${features.cat_features}
+        variable_names: ${features.cat_features}
+        max_n_prebins: 674
+        min_prebin_size: 0.04386525609119459
+        random_state: 42
 
-    - HistBooster:
-        _target_: model.modelorchastrator.HistBooster
-        learning_rate: 0.1
+    - HistGradientBoostingClassifier:
+        _target_: sklearn.ensemble.HistGradientBoostingClassifier
+        learning_rate: 0.05723818391467435
 
         verbose: 0
         class_weight: balanced
-        max_iter: 1000
-        l2_regularization: 0.3
+        max_iter: 3997
+        l2_regularization: 2.525756277489002
         early_stopping: True
-        max_leaf_nodes: 100
+        max_leaf_nodes: 106
+        max_bins: 196
+        max_depth: 605
+        random_state: 42
       
 hyperparameters:
   FeatureSelector:
@@ -44,9 +53,11 @@ hyperparameters:
       max: 0.5
       min: 0.02
       default: 0.05
-    column:
+    variable_names:
       default: ${features.cat_features}
-  HistBooster:
+    random_state:
+      default: 42
+  HistGradientBoostingClassifier:
     learning_rate:
       type: float
       max: 1
@@ -81,3 +92,5 @@ hyperparameters:
       default: 255
     class_weight:
       default: balanced
+    random_state:
+      default: 42
