--- a/conf/features/features.yaml
+++ b/conf/features/features.yaml
@@ -1,42 +1,55 @@
 all_features:
   - childnum_185L_mean
   # - housetype_905L_last
-  - familystate_447L_last
-  - education_927M_last
+  # - familystate_447L_last   NO DISTINCT VALUES
+  # - education_927M_last    NO DISTINCT VALUES
   - cardtype_51L_last
-  - credtype_322L_last
+  - credtype_322L_last 
   - numberofcontrsvalue_358L_max
   - nominalrate_281L_min
   - totaldebtoverduevalue_178A_max
   - overdueamount_31A_max
   - residualamount_488A_max
   - collater_valueofguarantee_876L_mean
-  - pmts_overdue_1140A_max
+  # - pmts_overdue_1140A_max HIGHLY CORRELATED WITH pmts_overdue_1140_min
   - pmts_overdue_1140A_min
   - pmts_overdue_1140A_mean
-  - credacc_cards_status_52L_mode
-  - credacc_cards_status_52L_last
+  # - credacc_cards_status_52L_mode NO DISTINCT VALUES
+  # - credacc_cards_status_52L_last NO DISTINCT VALUES
   - last180dayaveragebalance_704A_last
-  - last180dayaveragebalance_704A_mean
-  - last180dayaveragebalance_704A_max
+  - last180dayaveragebalance_704A_mean 
+  # - last180dayaveragebalance_704A_max HIGHLY CORRELATED WITH last180dayaveragebalance_704A_mean
   - classificationofcontr_400M_mode
   - numinstlswithdpd5_4187116L_last
   - numinstlsallpaid_934L_last
   - numinstls_657L_last
-  - cardtype_51L_mode
+  # - cardtype_51L_mode HIHGLY CORRELATED WITH cardtype_51L_last
   - avginstallast24m_3658937A_last
   - mainoccupationinc_437A_last
   - downpmt_116A_last
+  - pmts_year_507T_last
+  - pmts_year_1139T_last
+  - inittransactioncode_279L_last
+  - isdebitcard_527L_last
+  - pmtnum_8L_last
+  - postype_4733339M_last
+  - tenor_203L_last
 
 cat_features:
   # - housetype_905L_last
-  - education_927M_last
-  - credacc_cards_status_52L_mode
-  - familystate_447L_last
-  - credacc_cards_status_52L_last
+  # - education_927M_last
+  # - credacc_cards_status_52L_mode
+  # - familystate_447L_last
+  # - credacc_cards_status_52L_last
   - classificationofcontr_400M_mode
   - credtype_322L_last
   - cardtype_51L_last
-  - cardtype_51L_mode
+  - pmts_year_507T_last
+  - pmts_year_1139T_last
+  - inittransactioncode_279L_last
+  - mainoccupationinc_437A_last
+  - isdebitcard_527L_last
+  - postype_4733339M_last
+  # - cardtype_51L_mode
 
   
