--- a/conf/features/features.yaml
+++ b/conf/features/features.yaml
@@ -34,7 +34,7 @@ all_features:
   - pmtnum_8L_last
   - postype_4733339M_last
   - tenor_203L_last
-
+  - Age
 cat_features:
   # - housetype_905L_last
   # - education_927M_last
